rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-unique-parts__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Brush your teeth
  class: Part
  properties:
    Anchored:
      Type: Bool
      Value: false
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    BackParamA:
      Type: Float32
      Value: -0.5
    BackParamB:
      Type: Float32
      Value: 0.5
    BackSurface:
      Type: EnumValue
      Value: 0
    BackSurfaceInput:
      Type: EnumValue
      Value: 0
    BottomParamA:
      Type: Float32
      Value: -0.5
    BottomParamB:
      Type: Float32
      Value: 0.5
    BottomSurface:
      Type: EnumValue
      Value: 0
    BottomSurfaceInput:
      Type: EnumValue
      Value: 0
    CFrame:
      Type: CFrame
      Value:
        Position:
          - -5.5
          - 4.0
          - -12.5
        Orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 1.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
    CanCollide:
      Type: Bool
      Value: true
    CastShadow:
      Type: Bool
      Value: true
    CollisionGroupId:
      Type: Int32
      Value: 0
    Color:
      Type: Color3uint8
      Value:
        - 0
        - 255
        - 255
    CustomPhysicalProperties:
      Type: PhysicalProperties
      Value: Default
    FormFactor:
      Type: EnumValue
      Value: 1
    FrontParamA:
      Type: Float32
      Value: -0.5
    FrontParamB:
      Type: Float32
      Value: 0.5
    FrontSurface:
      Type: EnumValue
      Value: 0
    FrontSurfaceInput:
      Type: EnumValue
      Value: 0
    LeftParamA:
      Type: Float32
      Value: -0.5
    LeftParamB:
      Type: Float32
      Value: 0.5
    LeftSurface:
      Type: EnumValue
      Value: 0
    LeftSurfaceInput:
      Type: EnumValue
      Value: 0
    Locked:
      Type: Bool
      Value: false
    Massless:
      Type: Bool
      Value: false
    Material:
      Type: EnumValue
      Value: 256
    Reflectance:
      Type: Float32
      Value: 0.0
    RightParamA:
      Type: Float32
      Value: -0.5
    RightParamB:
      Type: Float32
      Value: 0.5
    RightSurface:
      Type: EnumValue
      Value: 0
    RightSurfaceInput:
      Type: EnumValue
      Value: 0
    RootPriority:
      Type: Int32
      Value: 0
    RotVelocity:
      Type: Vector3
      Value:
        - 0.0
        - 0.0
        - 0.0
    Shape:
      Type: EnumValue
      Value: 1
    Size:
      Type: Vector3
      Value:
        - 1.0
        - 2.0
        - 3.0
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    TopParamA:
      Type: Float32
      Value: -0.5
    TopParamB:
      Type: Float32
      Value: 0.5
    TopSurface:
      Type: EnumValue
      Value: 0
    TopSurfaceInput:
      Type: EnumValue
      Value: 0
    Transparency:
      Type: Float32
      Value: 0.0
    Velocity:
      Type: Vector3
      Value:
        - 0.0
        - 0.0
        - 0.0
  children: []
- referent: referent-1
  name: Eat your greens
  class: Part
  properties:
    Anchored:
      Type: Bool
      Value: false
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    BackParamA:
      Type: Float32
      Value: -0.5
    BackParamB:
      Type: Float32
      Value: 0.5
    BackSurface:
      Type: EnumValue
      Value: 0
    BackSurfaceInput:
      Type: EnumValue
      Value: 0
    BottomParamA:
      Type: Float32
      Value: -0.5
    BottomParamB:
      Type: Float32
      Value: 0.5
    BottomSurface:
      Type: EnumValue
      Value: 0
    BottomSurfaceInput:
      Type: EnumValue
      Value: 0
    CFrame:
      Type: CFrame
      Value:
        Position:
          - -11.5
          - -0.4999929964542389
          - -17.5
        Orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 1.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
    CanCollide:
      Type: Bool
      Value: true
    CastShadow:
      Type: Bool
      Value: true
    CollisionGroupId:
      Type: Int32
      Value: 0
    Color:
      Type: Color3uint8
      Value:
        - 44
        - 101
        - 29
    CustomPhysicalProperties:
      Type: PhysicalProperties
      Value:
        Density: 0.699999988079071
        Friction: 0.30000001192092898
        Elasticity: 0.5
        FrictionWeight: 1.0
        ElasticityWeight: 1.0
    FormFactor:
      Type: EnumValue
      Value: 1
    FrontParamA:
      Type: Float32
      Value: -0.5
    FrontParamB:
      Type: Float32
      Value: 0.5
    FrontSurface:
      Type: EnumValue
      Value: 0
    FrontSurfaceInput:
      Type: EnumValue
      Value: 0
    LeftParamA:
      Type: Float32
      Value: -0.5
    LeftParamB:
      Type: Float32
      Value: 0.5
    LeftSurface:
      Type: EnumValue
      Value: 0
    LeftSurfaceInput:
      Type: EnumValue
      Value: 0
    Locked:
      Type: Bool
      Value: false
    Massless:
      Type: Bool
      Value: false
    Material:
      Type: EnumValue
      Value: 256
    Reflectance:
      Type: Float32
      Value: 0.0
    RightParamA:
      Type: Float32
      Value: -0.5
    RightParamB:
      Type: Float32
      Value: 0.5
    RightSurface:
      Type: EnumValue
      Value: 0
    RightSurfaceInput:
      Type: EnumValue
      Value: 0
    RootPriority:
      Type: Int32
      Value: 0
    RotVelocity:
      Type: Vector3
      Value:
        - 0.0
        - 0.0
        - 0.0
    Shape:
      Type: EnumValue
      Value: 1
    Size:
      Type: Vector3
      Value:
        - 4.0
        - 5.0
        - 6.0
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    TopParamA:
      Type: Float32
      Value: -0.5
    TopParamB:
      Type: Float32
      Value: 0.5
    TopSurface:
      Type: EnumValue
      Value: 0
    TopSurfaceInput:
      Type: EnumValue
      Value: 0
    Transparency:
      Type: Float32
      Value: 0.0
    Velocity:
      Type: Vector3
      Value:
        - 0.0
        - 0.0
        - 0.0
  children: []
- referent: referent-2
  name: Live wildly
  class: Part
  properties:
    Anchored:
      Type: Bool
      Value: false
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    BackParamA:
      Type: Float32
      Value: -0.5
    BackParamB:
      Type: Float32
      Value: 0.5
    BackSurface:
      Type: EnumValue
      Value: 0
    BackSurfaceInput:
      Type: EnumValue
      Value: 0
    BottomParamA:
      Type: Float32
      Value: -0.5
    BottomParamB:
      Type: Float32
      Value: 0.5
    BottomSurface:
      Type: EnumValue
      Value: 0
    BottomSurfaceInput:
      Type: EnumValue
      Value: 0
    CFrame:
      Type: CFrame
      Value:
        Position:
          - 5.5
          - 8.5
          - -25.5
        Orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 1.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
    CanCollide:
      Type: Bool
      Value: true
    CastShadow:
      Type: Bool
      Value: true
    CollisionGroupId:
      Type: Int32
      Value: 0
    Color:
      Type: Color3uint8
      Value:
        - 255
        - 0
        - 191
    CustomPhysicalProperties:
      Type: PhysicalProperties
      Value:
        Density: 90.66000366210938
        Friction: 1.440000057220459
        Elasticity: 0.6499999761581421
        FrictionWeight: 50.5
        ElasticityWeight: 40.5
    FormFactor:
      Type: EnumValue
      Value: 1
    FrontParamA:
      Type: Float32
      Value: -0.5
    FrontParamB:
      Type: Float32
      Value: 0.5
    FrontSurface:
      Type: EnumValue
      Value: 0
    FrontSurfaceInput:
      Type: EnumValue
      Value: 0
    LeftParamA:
      Type: Float32
      Value: -0.5
    LeftParamB:
      Type: Float32
      Value: 0.5
    LeftSurface:
      Type: EnumValue
      Value: 0
    LeftSurfaceInput:
      Type: EnumValue
      Value: 0
    Locked:
      Type: Bool
      Value: false
    Massless:
      Type: Bool
      Value: false
    Material:
      Type: EnumValue
      Value: 256
    Reflectance:
      Type: Float32
      Value: 0.0
    RightParamA:
      Type: Float32
      Value: -0.5
    RightParamB:
      Type: Float32
      Value: 0.5
    RightSurface:
      Type: EnumValue
      Value: 0
    RightSurfaceInput:
      Type: EnumValue
      Value: 0
    RootPriority:
      Type: Int32
      Value: 0
    RotVelocity:
      Type: Vector3
      Value:
        - 0.0
        - 0.0
        - 0.0
    Shape:
      Type: EnumValue
      Value: 1
    Size:
      Type: Vector3
      Value:
        - 7.0
        - 8.0
        - 9.0
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    TopParamA:
      Type: Float32
      Value: -0.5
    TopParamB:
      Type: Float32
      Value: 0.5
    TopSurface:
      Type: EnumValue
      Value: 0
    TopSurfaceInput:
      Type: EnumValue
      Value: 0
    Transparency:
      Type: Float32
      Value: 0.0
    Velocity:
      Type: Vector3
      Value:
        - 0.0
        - 0.0
        - 0.0
  children: []
