rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-unique-parts__encoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: text_roundtrip

---
num_types: 1
num_instances: 3
chunks:
  - Inst:
      type_id: 0
      type_name: Part
      object_format: 0
      referents:
        - 0
        - 1
        - 2
  - Prop:
      type_id: 0
      prop_name: Anchored
      prop_type: Bool
      values:
        - false
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: BackParamA
      prop_type: Float32
      values:
        - -0.5
        - -0.5
        - -0.5
  - Prop:
      type_id: 0
      prop_name: BackParamB
      prop_type: Float32
      values:
        - 0.5
        - 0.5
        - 0.5
  - Prop:
      type_id: 0
      prop_name: BackSurface
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: BackSurfaceInput
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: BottomParamA
      prop_type: Float32
      values:
        - -0.5
        - -0.5
        - -0.5
  - Prop:
      type_id: 0
      prop_name: BottomParamB
      prop_type: Float32
      values:
        - 0.5
        - 0.5
        - 0.5
  - Prop:
      type_id: 0
      prop_name: BottomSurface
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: BottomSurfaceInput
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: CFrame
      prop_type: CFrame
      values:
        - position:
            - -5.5
            - 4.0
            - -12.5
          orientation:
            - - 1.0
              - 0.0
              - 0.0
            - - 0.0
              - 1.0
              - 0.0
            - - 0.0
              - 0.0
              - 1.0
        - position:
            - -11.5
            - -0.4999929964542389
            - -17.5
          orientation:
            - - 1.0
              - 0.0
              - 0.0
            - - 0.0
              - 1.0
              - 0.0
            - - 0.0
              - 0.0
              - 1.0
        - position:
            - 5.5
            - 8.5
            - -25.5
          orientation:
            - - 1.0
              - 0.0
              - 0.0
            - - 0.0
              - 1.0
              - 0.0
            - - 0.0
              - 0.0
              - 1.0
  - Prop:
      type_id: 0
      prop_name: CanCollide
      prop_type: Bool
      values:
        - true
        - true
        - true
  - Prop:
      type_id: 0
      prop_name: CastShadow
      prop_type: Bool
      values:
        - true
        - true
        - true
  - Prop:
      type_id: 0
      prop_name: CollisionGroupId
      prop_type: Int32
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: Color3uint8
      prop_type: Color3uint8
      values:
        - - 0
          - 255
          - 255
        - - 44
          - 101
          - 29
        - - 255
          - 0
          - 191
  - Prop:
      type_id: 0
      prop_name: CustomPhysicalProperties
      prop_type: PhysicalProperties
      values:
        - Default
        - density: 0.699999988079071
          friction: 0.30000001192092898
          elasticity: 0.5
          frictionWeight: 1.0
          elasticityWeight: 1.0
        - density: 90.66000366210938
          friction: 1.440000057220459
          elasticity: 0.6499999761581421
          frictionWeight: 50.5
          elasticityWeight: 40.5
  - Prop:
      type_id: 0
      prop_name: formFactorRaw
      prop_type: Enum
      values:
        - 1
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: FrontParamA
      prop_type: Float32
      values:
        - -0.5
        - -0.5
        - -0.5
  - Prop:
      type_id: 0
      prop_name: FrontParamB
      prop_type: Float32
      values:
        - 0.5
        - 0.5
        - 0.5
  - Prop:
      type_id: 0
      prop_name: FrontSurface
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: FrontSurfaceInput
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: LeftParamA
      prop_type: Float32
      values:
        - -0.5
        - -0.5
        - -0.5
  - Prop:
      type_id: 0
      prop_name: LeftParamB
      prop_type: Float32
      values:
        - 0.5
        - 0.5
        - 0.5
  - Prop:
      type_id: 0
      prop_name: LeftSurface
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: LeftSurfaceInput
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: Locked
      prop_type: Bool
      values:
        - false
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: Massless
      prop_type: Bool
      values:
        - false
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: Material
      prop_type: Enum
      values:
        - 256
        - 256
        - 256
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - Brush your teeth
        - Eat your greens
        - Live wildly
  - Prop:
      type_id: 0
      prop_name: Reflectance
      prop_type: Float32
      values:
        - 0.0
        - 0.0
        - 0.0
  - Prop:
      type_id: 0
      prop_name: RightParamA
      prop_type: Float32
      values:
        - -0.5
        - -0.5
        - -0.5
  - Prop:
      type_id: 0
      prop_name: RightParamB
      prop_type: Float32
      values:
        - 0.5
        - 0.5
        - 0.5
  - Prop:
      type_id: 0
      prop_name: RightSurface
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: RightSurfaceInput
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: RootPriority
      prop_type: Int32
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: RotVelocity
      prop_type: Vector3
      values:
        - - 0.0
          - 0.0
          - 0.0
        - - 0.0
          - 0.0
          - 0.0
        - - 0.0
          - 0.0
          - 0.0
  - Prop:
      type_id: 0
      prop_name: shape
      prop_type: Enum
      values:
        - 1
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: size
      prop_type: Vector3
      values:
        - - 1.0
          - 2.0
          - 3.0
        - - 4.0
          - 5.0
          - 6.0
        - - 7.0
          - 8.0
          - 9.0
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: TopParamA
      prop_type: Float32
      values:
        - -0.5
        - -0.5
        - -0.5
  - Prop:
      type_id: 0
      prop_name: TopParamB
      prop_type: Float32
      values:
        - 0.5
        - 0.5
        - 0.5
  - Prop:
      type_id: 0
      prop_name: TopSurface
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: TopSurfaceInput
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: Transparency
      prop_type: Float32
      values:
        - 0.0
        - 0.0
        - 0.0
  - Prop:
      type_id: 0
      prop_name: Velocity
      prop_type: Vector3
      values:
        - - 0.0
          - 0.0
          - 0.0
        - - 0.0
          - 0.0
          - 0.0
        - - 0.0
          - 0.0
          - 0.0
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
        - - 2
          - -1
  - End

